# scop42

./: .gitignore  Cargo.toml  Makefile  build.rs  compile_shaders.bat  notes.md  push_constants.txt  thoughts.md  tmp
docs/graph-app/: Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json
ecs/: Cargo.toml
ecs/macros/: Cargo.toml
ecs/src/: component.rs  entity.rs  lib.rs  query.rs  storage.rs  system.rs  world.rs
my_macros/: Cargo.toml
my_macros/src/: lib.rs
resources/: 42.mtl
shaders/: Dockerfile  colored_tri.frag  colored_tri.frag.spv  colored_tri.vert  colored_tri.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_dba.vert  mesh_dba.vert.spv  shader.frag  shader.vert  tri.frag  tri.frag.spv  tri.vert  tri.vert.spv
src/: camera.rs  components.rs  conf.rs  descriptor_write.rs  graphics_pipeline.rs  helpers.rs  input.rs  main.rs  material.rs  material_asset.rs  mesh.rs  mesh_asset.rs  mesh_constants.rs  mesh_renderer.rs  pipeline_layout.rs  playground.rs  prev.rs  sample.cpp  swapchain.rs  swapchain_scop.rs  todo.rs  traits.rs  tri_renderer.rs  utils.rs  vector.rs  vertex.rs
src/ObjAsset/: face.rs  mod.rs
src/components/: camera.rs  direction.rs  input.rs  mod.rs  physics_body.rs  position.rs  rotation.rs
src/ecs/: mod.rs  query.rs  system.rs  traits.rs
src/engine/: allocated_buffer.rs  allocated_image.rs  frame_data.rs  mod.rs  queue_famillies.rs  render_pass.rs  surface_support.rs  swapchain.rs
src/ft_vk/: allocated_buffer.rs  descriptor.rs  descriptor_allocator.rs  descriptor_set_layout.rs  frame_data.rs  graphics_pipeline.rs  mod.rs  pipeline_layout.rs  render_pass.rs  shader_module.rs  swapchain.rs
src/helpers/: buffer.rs  mod.rs  pipeline.rs
(+112 files in other folders)
