[package]
name = "scop42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
ash = "0.38.0"
glam = "0.27.0"
vk-mem = "0.4.0"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
winit = "0.29.15"
aftermath-rs = { git = "https://github.com/papawou/aftermath-rs.git" }
nvtx = "1.3.0"

[profile.dev]
opt-level = 0  # Level of optimizations, `0` is default for dev profile, which means no optimizations.
debug = true
