[package]
name = "scop42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
glam = "0.27.0"
vk-mem = "0.4.0"
ash = { version = "0.38.0", features = ["linked", "debug", "std"] }
winit = "0.29.15"

#[cfg(target_os = "windows")]
windows = {version = "0.58.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }

[profile.dev]
opt-level = 0  # Level of optimizations, `0` is default for dev profile, which means no optimizations.
debug = true
