[package]
name = "scop42"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.80"
glam = "0.27.0"
vk-mem = "0.4.0"
ash = { version = "0.38.0", features = ["linked", "debug", "std"] }
winit = "0.29.15"
ecs = { path = "./ecs" }

#[cfg(target_os = "windows")]
windows = { version = "0.58.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["ecs"]
